autotests/syntax-tests/tests/negative/negative112.sref
Name { Name Name ( Name ) [ Name ( ) ] e.Var Name # Name 'chars' 123 = $ENTRY Name Name ; = ; } ; 